--- a/index.html
+++ b/index.html
@@ -576,6 +576,132 @@
             margin: 0 auto;
             max-width: 800px;
         }
+
+        .floating-qr {
+            position: fixed;
+            bottom: 70px;
+            right: 20px;
+            z-index: 1000;
+        }
+
+        .qr-button {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: var(--primary-color);
+            border: none;
+            color: white;
+            font-size: 20px;
+            cursor: pointer;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .qr-button:hover {
+            transform: scale(1.1);
+            background: var(--accent-color);
+        }
+
+        .qr-modal {
+            position: fixed;
+            bottom: 130px;
+            right: 20px;
+            background: white;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+            display: none;
+            animation: slideUp 0.3s ease;
+        }
+
+        .qr-content {
+            text-align: center;
+        }
+
+        .qr-content img {
+            width: 200px;
+            height: 200px;
+            margin-bottom: 10px;
+        }
+
+        .download-btn {
+            background: var(--primary-color);
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 25px;
+            cursor: pointer;
+            margin-top: 10px;
+            transition: all 0.3s ease;
+        }
+
+        .download-btn:hover {
+            background: var(--accent-color);
+        }
+
+        .credits {
+            text-align: center;
+            padding: 20px;
+            background: rgba(255,255,255,0.9);
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
+        }
+
+        .credits p {
+            margin: 0;
+            color: #666;
+            font-size: 14px;
+        }
+
+        .credits a {
+            color: var(--primary-color);
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .credits .fa-heart {
+            color: #ff4d4d;
+            animation: heartBeat 1.5s infinite;
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes heartBeat {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+            100% { transform: scale(1); }
+        }
+
+        @media screen and (max-width: 768px) {
+            .floating-qr {
+                bottom: 80px;
+            }
+
+            .qr-modal {
+                right: 10px;
+                left: 10px;
+                bottom: 120px;
+            }
+
+            .qr-content img {
+                width: 150px;
+                height: 150px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -668,6 +794,28 @@
         </div>
     </div>
 
+    <div class="floating-qr">
+        <button class="qr-button" onclick="toggleQR()">
+            <i class="fas fa-qrcode"></i>
+        </button>
+        <div class="qr-modal" id="qrModal">
+            <div class="qr-content">
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://ayushkssk.github.io/wedding-website/" 
+                     alt="QR Code" id="qrCode">
+                <p>Scan to download invitation</p>
+                <button class="download-btn" onclick="downloadQR()">
+                    <i class="fas fa-download"></i> Download QR
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <footer class="credits">
+        <p>Designed & Developed with <i class="fas fa-heart"></i> by 
+            <a href="https://it4b.in" target="_blank">Ayush (it4b.in)</a>
+        </p>
+    </footer>
+
     <script>
         // Set the wedding date (update this to match your invitation)
         const weddingDate = new Date('June 25, 2024 16:00:00').getTime();
@@ -692,6 +840,30 @@
                 document.querySelector('.countdown').innerHTML = "The Wedding Day Has Arrived!";
             }
         }, 1000);
+
+        function toggleQR() {
+            const modal = document.getElementById('qrModal');
+            modal.style.display = modal.style.display === 'block' ? 'none' : 'block';
+        }
+
+        function downloadQR() {
+            const qrImage = document.getElementById('qrCode');
+            const link = document.createElement('a');
+            link.href = qrImage.src;
+            link.download = 'wedding-invitation-qr.png';
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        }
+
+        // Close QR modal when clicking outside
+        document.addEventListener('click', function(event) {
+            const modal = document.getElementById('qrModal');
+            const qrButton = document.querySelector('.qr-button');
+            if (!modal.contains(event.target) && event.target !== qrButton) {
+                modal.style.display = 'none';
+            }
+        });
     </script>
 </body>
 </html>
