--- a/index.html
+++ b/index.html
@@ -644,39 +644,100 @@
 
         .credits {
             text-align: center;
-            padding: 20px;
+            padding: 8px;
             background: rgba(255,255,255,0.9);
             position: fixed;
             bottom: 0;
             width: 100%;
-            box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 -1px 5px rgba(0,0,0,0.1);
+            z-index: 999;
         }
 
-        .credits p {
-            margin: 0;
+        .credits small {
             color: #666;
-            font-size: 14px;
+            font-size: 12px;
         }
 
         .credits a {
             color: var(--primary-color);
             text-decoration: none;
-            font-weight: bold;
         }
 
         .credits .fa-heart {
             color: #ff4d4d;
+            font-size: 10px;
             animation: heartBeat 1.5s infinite;
         }
 
-        @keyframes slideUp {
+        .popup-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0,0,0,0.5);
+            z-index: 1100;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .popup-content {
+            background: white;
+            padding: 20px;
+            border-radius: 15px;
+            text-align: center;
+            max-width: 300px;
+            width: 90%;
+            animation: popupIn 0.3s ease;
+        }
+
+        .popup-content h3 {
+            color: var(--primary-color);
+            margin: 0 0 10px 0;
+        }
+
+        .popup-buttons {
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .confirm-btn, .cancel-btn {
+            padding: 8px 20px;
+            border: none;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .confirm-btn {
+            background: var(--primary-color);
+            color: white;
+        }
+
+        .cancel-btn {
+            background: #eee;
+            color: #666;
+        }
+
+        .confirm-btn:hover {
+            background: var(--accent-color);
+        }
+
+        .cancel-btn:hover {
+            background: #ddd;
+        }
+
+        @keyframes popupIn {
             from {
                 opacity: 0;
-                transform: translateY(20px);
+                transform: scale(0.9);
             }
             to {
                 opacity: 1;
-                transform: translateY(0);
+                transform: scale(1);
             }
         }
 
@@ -811,10 +872,19 @@
     </div>
 
     <footer class="credits">
-        <p>Designed & Developed with <i class="fas fa-heart"></i> by 
-            <a href="https://it4b.in" target="_blank">Ayush (it4b.in)</a>
-        </p>
+        <small>Designed & Developed by <a href="https://it4b.in" target="_blank">Ayush</a> <i class="fas fa-heart"></i></small>
     </footer>
+
+    <div class="popup-overlay" id="downloadPopup">
+        <div class="popup-content">
+            <h3>Download QR Code</h3>
+            <p>Do you want to download the invitation QR code?</p>
+            <div class="popup-buttons">
+                <button onclick="confirmDownload()" class="confirm-btn">Yes, Download</button>
+                <button onclick="closePopup()" class="cancel-btn">Cancel</button>
+            </div>
+        </div>
+    </div>
 
     <script>
         // Set the wedding date (update this to match your invitation)
