--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ranjeet & Jane's Wedding</title>
+    <title>Ranjeet & Sngh's Wedding</title>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -768,7 +768,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Ranjeet & Jane's Wedding</h1>
+            <h1>Ranjeet & Sngh's Wedding</h1>
         </header>
 
         <div class="couple-section">
@@ -788,10 +788,10 @@
 
             <div class="person-card">
                 <div class="photo-frame">
-                    <img src="bride.jpg" alt="Jane Doe" />
+                    <img src="bride.jpg" alt="Sngh " />
                 </div>
-                <h3 class="person-name">Jane Doe</h3>
-                <p class="person-desc">Daughter of Mr. & Mrs. Doe<br>Art Director at Creative Studio</p>
+                <h3 class="person-name">Sngh </h3>
+                <p class="person-desc">Daughter of Mr. & Mrs. <br>Art Director at Creative Studio</p>
             </div>
         </div>
 
@@ -817,9 +817,9 @@
 
                 <div class="family-card">
                     <div class="family-photo">
-                        <img src="bride-parents.jpg" alt="Doe Parents">
+                        <img src="bride-parents.jpg" alt=" Parents">
                     </div>
-                    <h3 class="family-name">Mr. & Mrs. Doe</h3>
+                    <h3 class="family-name">Mr. & Mrs. </h3>
                     <p class="family-relation">Parents of the Bride</p>
                 </div>
             </div>
