--- a/invitation.html
+++ b/invitation.html
@@ -30,51 +30,74 @@
         }
 
         .border-design {
-            border: 2px solid #d4af37;
+            border: 2px solid;
+            border-image: linear-gradient(45deg, #d4af37, #8B4513, #d4af37) 1;
             position: absolute;
             top: 20px;
             left: 20px;
             right: 20px;
             bottom: 20px;
             pointer-events: none;
+            animation: borderGlow 4s infinite;
         }
 
         h1 {
-            color: #d4af37;
-            font-size: 36px;
+            background: linear-gradient(45deg, #d4af37, #8B4513, #d4af37);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: titleGradient 6s infinite;
+            font-size: 38px;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
             margin-bottom: 20px;
             font-weight: normal;
         }
 
         .names {
-            font-size: 48px;
-            color: #333;
-            margin: 30px 0;
-            font-family: 'Great Vibes', cursive;
+            background: linear-gradient(45deg, #8B4513, #d4af37, #8B4513);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-size: 52px;
+            font-weight: bold;
+            margin: 35px 0;
+            animation: nameGradient 8s infinite;
         }
 
         .date-time {
-            font-size: 24px;
-            color: #666;
-            margin: 20px 0;
+            background: linear-gradient(45deg, #d4af37, #8B4513);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-size: 26px;
+            font-weight: bold;
+            margin: 25px 0;
         }
 
         .location {
-            font-size: 20px;
-            color: #888;
-            margin: 20px 0;
+            color: #8B4513;
+            font-size: 22px;
+            font-weight: 500;
+            margin: 25px 0;
+            line-height: 1.8;
         }
 
         .rsvp {
-            margin-top: 40px;
-            color: #d4af37;
-            font-size: 18px;
+            background: linear-gradient(45deg, #8B4513, #d4af37);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-size: 20px;
+            font-weight: bold;
+            margin-top: 45px;
         }
 
         .ornament {
             color: #d4af37;
-            font-size: 24px;
-            margin: 20px 0;
+            font-size: 28px;
+            margin: 25px 0;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+            animation: ornamentGlow 2s infinite;
         }
 
         .exit-button {
@@ -240,6 +263,46 @@
             body {
                 background: white;
             }
+        }
+
+        /* Add animations */
+        @keyframes titleGradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        @keyframes nameGradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        @keyframes ornamentGlow {
+            0% { opacity: 0.8; }
+            50% { opacity: 1; }
+            100% { opacity: 0.8; }
+        }
+
+        /* Browser fallback */
+        @supports not (background-clip: text) {
+            h1, .names, .date-time, .rsvp {
+                background: none;
+                color: #d4af37;
+            }
+        }
+
+        /* Update border design */
+        .border-design {
+            border: 2px solid;
+            border-image: linear-gradient(45deg, #d4af37, #8B4513, #d4af37) 1;
+            animation: borderGlow 4s infinite;
+        }
+
+        @keyframes borderGlow {
+            0% { opacity: 0.8; }
+            50% { opacity: 1; }
+            100% { opacity: 0.8; }
         }
     </style>
 </head>
